<resources>
    <string name="app_name">WhatsApp</string>
    <string name="app_chat">CHAT</string>
    <string name="app_estado">ESTADOS</string>
    <string name="app_llamada">LLAMADAS</string>
    <string name="dm_Nuevogrupo">Nuevo grupo</string>
    <string name="dm_Nuevadifusion">Nuevo difusión</string>
    <string name="dm_whatsappWeb">WhatsApp Web</string>
    <string name="dm_mensajeDestacado">Mensaje destacados</string>
    <string name="dm_Ajustes">Ajustes</string>
    <string name="title_activity_sms2">sms2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>